Add one document, attach title background images to all posts. configure github path.

--- a/_posts/2018-10-04-Hello.md
+++ b/_posts/2018-10-04-Hello.md
@@ -3,6 +3,11 @@ layout: article
 title: 我也是有博客的人了!
 show_author_profile: True
 author: Yucheng Li
+article_header:
+  type: overlay
+  theme: dark
+  background_image:
+    src: /assets/images/my_pic/Bankok_1.jpg
 ---
 
 舒服了！
@@ -10,3 +15,6 @@ author: Yucheng Li
 <!--more-->
 
 以后就把这里当做我的笔记和备忘录咯，哦吼！
+
+封面照片摄于泰国曼谷
+{:.success}
