--- a/_posts/2018-10-12-权威模型.md
+++ b/_posts/2018-10-12-权威模型.md
@@ -5,7 +5,7 @@ article_header:
   type: overlay
   theme: dark
   background_image:
-    src: /assets/images/my_pic/Monaco_1.JPG
+    src: /assets/images/my_pic/Monaco_1.jpg
 comment: true
 key: 20181012
 ---
@@ -178,3 +178,6 @@ key: 20181012
 毛一个尝试是试图以官僚体制和群众运动双重并用，互为钳制。一方面官僚体制用于组织群众，另一方面群众制约和推动官僚组织，于是群众运动在中国历史上第一次进入了国家治理逻辑，
 其缺点在于官僚制和群众运动无法兼容，难以构建一个稳定相济的制度基础。
 
+
+封面照片摄于摩纳哥🇲🇨
+{:.success}
