add article environement protechtion and add some images

--- a/_posts/2018-10-12-权威模型.md
+++ b/_posts/2018-10-12-权威模型.md
@@ -30,11 +30,9 @@ key: 20181012
 韦伯认为，任何权利都不能持久的建立在强制或暴力的基础之上，而必须具有合法性基础。
 权利一单建构在合法性基础之上，即成为权威。
 由此，韦伯根据合法性来源不同，将权威分为3种理想类型。
-
 1. 传统权威
 2. 卡理斯玛权威
 3. 法理权威
-
 所谓理想类型，即把现实中事件的特征抽象概括。理想类型，在现实中并不存在，实际运行的权威可能是多种理想类型的混合。
 
 ### 传统权威
@@ -49,7 +47,6 @@ key: 20181012
 
 法理权威，是依据民众所认可接受的公证程序而获得合法性基础。例如通过选举产生总统和代表。
 
-
 考查权威行使自身权利的方式，韦伯提出了‘支配形式’的概念。
 
 ## 权利支配形式
@@ -57,15 +54,11 @@ key: 20181012
 权利支配形式，指国家政权的基本组织形式。
 
 典型的支配形式
-
 1. 官僚制
 2. 家长制
 3. 卡理斯玛制
-
 官僚制中，法理权威和规章制度有密切关系，特别强调程序正确、法理面前人人平等等基本原则。
-
 卡理斯玛制，领袖通过不断创造奇迹，以显示其超凡禀赋，来说服追随者服从和认可。
-
 家长制，传统权威为了巩固自身合法性，需要不断巩固人们对传统习俗的认同。
 
 ## 韦伯的官僚与中国官僚
@@ -109,9 +102,9 @@ key: 20181012
 ### 皇权可以打断官僚系统的正常运行
 
 君主专制权利凌驾与官僚权力之上，不受官僚规则的羁绊。
-*这意味着君主的意志，可以随时打断叫停官僚体制按部就班的运转。*
+**这意味着君主的意志，可以随时打断叫停官僚体制按部就班的运转。**
 
-因此中国的官僚体制断然不可能真正制度化，真正建立在程序规则及法理权威基础上。因为这将削弱甚至否定君主的专断权利。然而为了使得君主有效地行使专断权利，*各级官员也必须拥有对其下属类似的权利*，用于执行和实施自上而下的专断指令。
+因此中国的官僚体制断然不可能真正制度化，真正建立在程序规则及法理权威基础上。因为这将削弱甚至否定君主的专断权利。然而为了使得君主有效地行使专断权利，**各级官员也必须拥有对其下属类似的权利**，用于执行和实施自上而下的专断指令。
 换言之。如果各级官员没有类似的这个权利，他们就无法执行君主的意图，无法改变或者打断官僚体制的运行。
 
 一旦官僚制度不能建立在程序规则之上：向上负责制，造成了极大的不确定性
@@ -119,9 +112,10 @@ key: 20181012
 ### 皇权对官僚产生的影响
 
 面对皇权、或代表皇权的权威，官僚组织中的上下级之间，有一种相依为命的关系。上级依靠下属完成任务，掩盖问题。而下级依靠上级的赏识获得进取，或求得庇护。
-*如此关系网络中的庇护关系、山头、宗派滋长丛生。*如此官僚体制的实际运行对一统的皇权造成了威胁。
+**如此关系网络中的庇护关系、山头、宗派滋长丛生。**如此官僚体制的实际运行对一统的皇权造成了威胁。
 
 > 君权强，则官僚体制为之所用
+>
 > 君权弱，则官僚体制自行其是
 
 
@@ -129,12 +123,12 @@ key: 20181012
 
 ### 中国国家权利之合法性
 
-*当代社会主义中国，建立在以法理权威为表、卡理斯玛权威为实的混合型基础之上。*
+**当代社会主义中国，建立在以法理权威为表、卡理斯玛权威为实的混合型基础之上。**
 
 近代中国经历一系列重大变革、战争。中华帝国的合法性：儒教基础上的传统权威，已经无法为国家权利做声明。法理权威是近代国家，无可争辩的合法性基础。
 
 然而在一个经历数千年君主官僚制的传统中国社会，法理权威并没有真正扎根。卡理斯玛权威，以一种全新的方式，作为执政党的权利依据而存在。执政党的种种努力，也在事实上塑造和巩固了卡理斯玛权威。
-*这是历史的选择*
+**这是历史的选择**
 
 - 卡理斯玛权威的特征之一：可以有效的调动群众投入政治、经济、社会等方面的建设过程中。
 - 卡理斯玛权威的特征之二：群众运动是维系群众和领袖之间关系的重要手段。
@@ -148,7 +142,7 @@ key: 20181012
 在中国，作为权力中心的党，与官僚体制之间，始终是主从关系。换言之，虽然国家支配形式改变，但官僚体制的位置一如中国历史上的官僚体制，其合法性仍然来源于自上而下的授权。仍然体现在‘向上负责制’一系列制度安排之上，但国家与官僚制之间的组成关系有了新的演变。
 
 
-1. *国家凌驾于官僚体制之上，权力关系更为强化*。在正式制度之上，执政党借用列宁式政党的组织形式行使卡理斯玛权威和严密的组织纪律。对于官僚制有更多的约束和动员能力，并且体现在一系列制度安排之上。
+1. **国家凌驾于官僚体制之上，权力关系更为强化**。在正式制度之上，执政党借用列宁式政党的组织形式行使卡理斯玛权威和严密的组织纪律。对于官僚制有更多的约束和动员能力，并且体现在一系列制度安排之上。
 2. 随着执政党经过卡理斯玛权威的制度化过程，官僚制有了历史上前所未有的拓展，延伸至社会各个领域角落。
 
 #### 官僚制的拓展
@@ -162,7 +156,7 @@ key: 20181012
 
 ### 规则的尴尬
 
-*卡理斯玛权威，不能忍受官僚体制的束缚*。需要时常打断官僚体制内部机制的惯性来实现其意图。对这一体制中的官僚主义、宗派主义问题的批评，指责反复见诸毛的著作中。
+**卡理斯玛权威，不能忍受官僚体制的束缚**。需要时常打断官僚体制内部机制的惯性来实现其意图。对这一体制中的官僚主义、宗派主义问题的批评，指责反复见诸毛的著作中。
 
 #### 官僚制非正式关系的来源
 
@@ -177,6 +171,21 @@ key: 20181012
 
 毛一个尝试是试图以官僚体制和群众运动双重并用，互为钳制。一方面官僚体制用于组织群众，另一方面群众制约和推动官僚组织，于是群众运动在中国历史上第一次进入了国家治理逻辑，
 其缺点在于官僚制和群众运动无法兼容，难以构建一个稳定相济的制度基础。
+
+### 后毛泽东时代的中国
+
+#### 卡理斯玛权威的式微
+
+在后毛泽东时代，卡理斯玛权威，受到多方挑战，陷入了深刻的困难和危机。随着中国社会本身的多元化发展卡理斯玛权威的两个制度设施，即：高度统一的观念制度和严密的组织制度，在改革开放时代都有了极大的削弱。领袖与追随者之间的认同、服从的纽带已经难以为继。执政党也在寻找新的合法性基础，强调法制健全规章制度。
+
+卡理斯玛无可奈何的式微，体现在一次次试图整治官僚体制的努力与失败中。以及针对官僚权力的政治力不从心的无奈境地。如此近年来的国家建设出现了一个危险倾向即官僚权利在其约束条件缺失的情况下急剧扩张。
+
+#### 缺失合法性的危机
+
+但是许多做法仍表现出重新加强卡里斯玛权威的努力，例如强化在意识形态领域中的管控，强化政治教化。改革开放时期，经济迅速发展，也引领着执政党沿着卡理斯玛权威的轨迹走下去。
+在这样的背景之下，执政党面临着巨大的政治压力，更多的依赖官僚体制来推动经济发展，以此获得合法性。
+
+近年来，民众常常发出声音，寻求公民权力，法律面前人人平等。今天卡理斯玛权威已经不足以提供稳定的合法性基础。国家治理的合法性基础，成为急需回答的问题。
 
 
 封面照片摄于摩纳哥🇲🇨
