add article environement protechtion and add some images

--- a/_posts/2018-10-14-环境问题.md
+++ b/_posts/2018-10-14-环境问题.md
@@ -10,13 +10,29 @@ comment: true
 key: 20181012
 ---
 
-## 环保是一件好事，为什么会有人对此产生质疑呢？
+政治课讲义。欢迎大家。
 
-环保和经济，往往不可兼得。矛盾正是来源于。
+<!--more-->
+
+## 环境问题到底有多严重？
+
+首先说一说长远的方面。
+“本世纪后期，华北平原由于气温上升将不适于人类居住。”
+该观点来源于Nature Communication，还无疑问的Top级期刊。得出的结论是用了state of art的模型方法。
+
+最近的，根据Plos One上的文献：Air Pollution in China: Mapping of Concentrations and Sources。
+在中国呼吸一天相当于吸烟2.4支。在北京，则相当于每天吸4支。
+在极端天气下，北京一天相当于吸烟25支。
+
+
+## 既然环保是一件好事，那么为什么会有人对执行环保产生质疑呢？
+
+环保和经济，至少在目前，是不可兼得的。矛盾正是来源于。
 当为了环保影响到了人们的生活的时候，那么矛盾的激化就应运而生。
 
 - 人们的生活出现了各种不便利，生活成本增加。
 - 很多人的职业和收入收到了影响
+
 例如
 - 大量的小微企业关停整顿带来的失业和收入下降
 - 关停禁养区/限养区内养殖场造成食品价格波动
@@ -25,11 +41,13 @@ key: 20181012
 - 小散乱污企业大量关停造成外购零部件/原材料价格上涨
 - 采石、挖沙、码头堆场扬尘、渣土运输等大量停业整顿造成建材价格上升
 
+更严重的是在整治过程中，执法部门普遍的‘一刀切’现象，使得民怨沸腾。
+
 ## 环保督查只是为了环保吗？
 
 中国有严重的产能过剩问题，远超其他国家。
 据统计，钢铁、水泥、电解铝、平板玻璃、造船等行业的产能利用率，分别只有72%、73.7%、71.9%、73.1%和75%。
-以上只是冰山一角。
+以上产业只是冰山一角。
 
 然而解决产能过剩问题却异常艰难，因为一旦涉及到利益，各种阻挠、障碍都会随之出现。
 怎么办，让工厂停产，或者降低产能？
@@ -50,7 +68,8 @@ key: 20181012
 其在自然会在中央政府向下传递命令的过程中层层加码。
 最终形成矫枉过正的结果。
 
-其次，我们都知道堵不如疏。但是基层干部在执行任务时，往往面临无法提前预料的巨大困难；或缺乏能力的懒政行为。
+其次，我们都知道堵不如疏。但是基层干部在执行任务时，往往面临无法提前预料的巨大困难。
+完成环保目标，某种程度上难度超乎大部分人的预料。根据周雪光在中国北方某县的田野调查：该县基层环保部门的干部人数13个。而该地拥有各种企业，单位上千所，包括饭店，作坊，工厂，企业等。与之相关联的人数上万人。
 官僚对着文件，符合标准的就继续干，不合标准的就关门。当然是最省事的办事方式，但却是不负责任的一种体现。
 
 ## 既然环保出现了一系列问题，那么为了环保牺牲那么多，值得吗？
