Edit politic assignment article

--- a/_posts/2018-10-14-环境问题.md
+++ b/_posts/2018-10-14-环境问题.md
@@ -7,12 +7,18 @@ article_header:
   background_image:
     src: /assets/images/my_pic/Cannes_2.jpg
 comment: true
-key: 20181012
+key: 20181015
 ---
 
 政治课讲义。欢迎大家。
 
 <!--more-->
+
+## 2017环保督查
+
+2017年暑假，我惊讶的发现，在我们那个小城市。许多店铺在一夜之间，全部关门闭户。搞装修做家具的，洗车的，加工面粉的。统统关了门。更严重的事，大多数的早餐铺子，烧烤摊，大排档也都不见了踪影。找不到地方吃喝玩乐了，这对我造成了很大的困扰。
+
+说到发生这些的原因，就不得不提2017掀起的环保风暴。
 
 ## 环境问题到底有多严重？
 
@@ -24,8 +30,17 @@ key: 20181012
 在中国呼吸一天相当于吸烟2.4支。在北京，则相当于每天吸4支。
 在极端天气下，北京一天相当于吸烟25支。
 
+## 对待环保问题，态度的转变
+
+环保年年都在说，但是年年的进展都不大。为什么？因为无论环保的口号喊的多响，环境保护，始终都不是政府的核心任务。经济还是毫无疑问的第一要务。所以‘我国自由国情’，即使法律完善，但是执行上总是不给力。
+
+然而最近，我们可以明显的感受到，政府对待环保态度的转变。
+
+／<Place Holder>
 
 ## 既然环保是一件好事，那么为什么会有人对执行环保产生质疑呢？
+
+我们不得不承认，人们对环保的态度正在发生微妙的转变。
 
 环保和经济，至少在目前，是不可兼得的。矛盾正是来源于。
 当为了环保影响到了人们的生活的时候，那么矛盾的激化就应运而生。
@@ -36,12 +51,16 @@ key: 20181012
 例如
 - 大量的小微企业关停整顿带来的失业和收入下降
 - 关停禁养区/限养区内养殖场造成食品价格波动
-- 对喷涂行业VOCs整治造成很多车辆维修店停业
 - 餐饮油烟整治造成很多达不到要求的餐馆停业
 - 小散乱污企业大量关停造成外购零部件/原材料价格上涨
 - 采石、挖沙、码头堆场扬尘、渣土运输等大量停业整顿造成建材价格上升
 
 更严重的是在整治过程中，执法部门普遍的‘一刀切’现象，使得民怨沸腾。
+
+## 面对这些环保造成的问题，我们该怎样面对？
+
+有大量的数据和资料可以证明，相关治理的措施有非常的必要性和紧迫性。
+所以我们可以推断，相关的环保措施和督查手段，今后很有可能将会变为常态。一些阶段性问题，例如矫枉过正，则会随着时间逐步回归正常。
 
 ## 环保督查只是为了环保吗？
 
@@ -75,9 +94,24 @@ key: 20181012
 
 ## 巴黎协定
 
+巴黎协定的最核心问题，是碳排放问题。丁仲礼院士认为其为发展权问题。
+中国的人均碳排放属于较低水平。
 
+- 中国 111.13
+- 印度 30.05
+- 日本 399.84
+- 加拿大 814.77
+- 澳大利亚 654.71
+- 欧盟 651.46
+- 美国 1166.53
 
-## 既然环保出现了一系列问题，那么为了环保牺牲那么多，值得吗？
+同时，中国的碳排放量大部分都是工业排放量，而工业产物大都出口销售。这意味着，中国承担了发达国家消费品的生产和碳排放，但是获取的实际上只是制造业的低附加值收入，高附加值缓解仍旧掌握在发达国家手中。
+
+最终，各个国家的具体减排数字，也没有被写进协议。从另一个方面来讲，减排二氧化碳这个问题，对人类来说尤为的困难。我兴建一个工厂，开足马力干他56年，立马就能过上舒服的日子。至于我造成的污染呢，我管他呢，我假装看不见。亦或者，我自我说服，等我有钱了，治理环境污染还不止是小菜一碟？我们以后慢慢治理嘛。对不对。所以，对于全球变暖这个问题，我们能做的只有什么，少用一次性筷子，少吃外卖。。。买电动汽车，除此之外呢，我们能做的恐怕只有祈祷了。
+
+既然如此，中国签署巴黎协定，表示遵守其倡议，有意义吗？
+
+当然有，中国的环境污染问题严重程度世界第一，并且远超其他国家。在我们看不到的地方，二线城市，三线城市，农村，城市边缘地带污染已经是威胁生命的地步。所以中国并没有选择的余地，必须行动起来。钱很重要，但是命，毫无疑问更加重要。除了这方面的考虑，中国正在经历产业转型时期，制造业正在摆脱低端、污染严重产业，走向高端，高附加值产业。这同时是个机遇。
 
 
 封面照片摄于法国戛纳🇫🇷
