delete some cotent

--- a/_posts/2018-10-12-权威模型.md
+++ b/_posts/2018-10-12-权威模型.md
@@ -154,6 +154,9 @@ key: 20181012
 
 2. 通过官僚体制将民众组织起来，以稳定的组织来保证民众与卡理斯玛权威领袖的密切关系。在中国这一组织形式达到了历史上前所未有的程度，从城市到农村的各个角落，都被高度组织起来了。革命教化和运动是治理乡下渗透，成为执政党的日常工作。
 
+`以下内容暂时和谐`
+
+<!--
 ### 规则的尴尬
 
 **卡理斯玛权威，不能忍受官僚体制的束缚**。需要时常打断官僚体制内部机制的惯性来实现其意图。对这一体制中的官僚主义、宗派主义问题的批评，指责反复见诸毛的著作中。
@@ -186,7 +189,7 @@ key: 20181012
 在这样的背景之下，执政党面临着巨大的政治压力，更多的依赖官僚体制来推动经济发展，以此获得合法性。
 
 近年来，民众常常发出声音，寻求公民权力，法律面前人人平等。今天卡理斯玛权威已经不足以提供稳定的合法性基础。国家治理的合法性基础，成为急需回答的问题。
-
+-->
 
 封面照片摄于摩纳哥🇲🇨
 {:.success}
