--- a/_posts/2018-10-14-环境问题.md
+++ b/_posts/2018-10-14-环境问题.md
@@ -32,18 +32,18 @@ key: 20181015
 
 ## 对待环保问题，态度的转变
 
-环保年年都在说，但是年年的进展都不大。为什么？因为无论环保的口号喊的多响，环境保护，始终都不是政府的核心任务。经济还是毫无疑问的第一要务。所以‘我国自由国情’，即使法律完善，但是执行上总是不给力。
+环保年年都在说，但是年年的进展都不大。为什么？因为无论环保的口号喊的多响，环境保护，始终都不是政府的核心任务。经济还是毫无疑问的第一要务。所以‘我国自有国情’，即使法律完善，但是执行上总是不给力。
 
 然而最近，我们可以明显的感受到，政府对待环保态度的转变。
 
-／<Place Holder>
+/<Place Holder>
 
 ## 既然环保是一件好事，那么为什么会有人对执行环保产生质疑呢？
 
-我们不得不承认，人们对环保的态度正在发生微妙的转变。
+在政府对环保问题态度转变的同时，我们不得不承认，人们对环保的态度也正在发生微妙的转变。
 
 环保和经济，至少在目前，是不可兼得的。矛盾正是来源于。
-当为了环保影响到了人们的生活的时候，那么矛盾的激化就应运而生。
+当为了环保影响到了人们的生活的时候，那么人们对待环保的态度所发生的转变也就不足为奇了。
 
 - 人们的生活出现了各种不便利，生活成本增加。
 - 很多人的职业和收入收到了影响
@@ -61,6 +61,8 @@ key: 20181015
 
 有大量的数据和资料可以证明，相关治理的措施有非常的必要性和紧迫性。
 所以我们可以推断，相关的环保措施和督查手段，今后很有可能将会变为常态。一些阶段性问题，例如矫枉过正，则会随着时间逐步回归正常。
+
+那么对于这些问题，国家的相关部门想出了什么相应的对策呢？
 
 ## 环保督查只是为了环保吗？
 
