Add tag for all posts and add my first overview

--- a/_posts/2018-10-05-无组织集体行动.md
+++ b/_posts/2018-10-05-无组织集体行动.md
@@ -6,6 +6,9 @@ article_header:
   theme: dark
   background_image:
     src: /assets/images/my_pic/Phuket_1.JPG
+tags:
+- 政治
+- Politics
 ---
 
 近代中国时常出现一种特殊形式的集体行动，即建立在无组织利益之上的无权无势无组织民众在一定条件下发起和参与了挑战国家权威的集体行动。
