--- a/_posts/2018-12-11-France.md
+++ b/_posts/2018-12-11-France.md
@@ -16,23 +16,28 @@ tags:
 
 <!--more-->
 
-Today, let we talk about France.
+**Today, let we talk about France.**
+
 My little talk just has one simple object, that is, make all of you fall in love with France in just fifteen minutes.
 So I will try my best to impress you, and you also need to try your best to listen to me.
 
-Let me ask you a question, Why you love a country? Why you love a country? Maybe it's not easy to give your answer. So I am willing to use an example. Why do you fall in love with a girl or a boy? Imagine there is a girl who is not only beautiful, intelligent but also sexy. Will you love such a girl?  Of course not! In which case we will love somebody? When this girl is special for me, We will fall in love with him or her just because they are special for us.
+**Let me ask you a question.**
 
-For me, France is such special, I can't help fall in love with her. She is the combination of both glory and shame.
+*Why you love a country? Why you love a country? Maybe it's not easy to give your answer. So I am willing to use an example. Why do you fall in love with a girl or a boy?*
+
+**Imagine there is a girl who is not only beautiful, intelligent but also sexy. Will you love such a girl?  Of course not! In which case we will love somebody? When this girl is special for me, We will fall in love with him or her just because they are special for us.**
+
+**For me, France is such special, I can't help fall in love with her. She is the combination of both glory and shame.**
 
 
 ---
-Glory is the most precise word to describe the feeling when you read the history of France /// contact France. When you walk down such a beautiful gallery, la Versailles.
+*Glory is the most precise word to describe the feeling when you read the history of France /// contact France.*
+
+**When you walk down such a beautiful gallery, la Versailles.
 When you face to Notre-Dame.
 When you sea Musee du Louvre.
-
-**The most precise word to describe such feeling is glory.**
-
-Glory belongs to her past.
+what are you feeling?**
+**The most precise word to describe such feeling is glory. Glory belongs to her past.**
 
 
 
@@ -40,22 +45,22 @@ Glory belongs to her past.
 *But in the same place, la Versailles also bring shame to France. Germany king coronated here. At that time la Versailles is the virtual capital of France. La Versailles is the symbol of glory and shame.*
 ---
 
-But Glory, this word is implicit, we need to find something explicit, like some evidence to explain the meaning of glory. 
-*First, we have to choose a special aspect to explain the meaning of glory.*
+**But Glory, this word is implicit, we need to find something explicit, like some evidence to explain the meaning of glory.**
 
 # Culture
 Let's see French culture. When I first learning French, I discover there are so many words in French looks exactly the same with English. After that, I find that those words all came from French. I search those word in Oxford dictionary, that show that they all have French ancestor.
 
-That is an evidence that French people established modern science. Both nature science and social science.
+That is an evidence of prosperity of FRENCH science, culture, and power.
 
 # Influence
-Then the international influence. France used to be the most powerful country, of course, she has many followers. Let we concentrate on East Asia. Vietnam used to be a colony of France, Hochiminh, the leader of the revolution of Vietnam has come to France for work and study long times ago. 
+Then the international influence. France used to be the most powerful country, of course. Let we concentrate on East Asia. Vietnam used to be a colony of France, Hochiminh, the leader of the revolution of Vietnam has come to France for work and study long times ago. 
 For Japanese people, their desire for France, Paris never stopped for one second. 
 
 # shame
 After the glory of France, why France got shame nowadays. This sentence, it says La... It means that.... There is almost no much content of the comming world war. However, they forgot this is necessary that have a war to protect their country, protect their nation. They have to fight for themselves. But...After 6...
 
-People who have the willingness to sacrifice for their country have to go far from their home. Establishing an organization of fights. He has to lead the liberal French fight against NAZI in Algeri.
+People who have the willingness to sacrifice for their country have to go far  from their home at Algeri fight against Nazi.
+they are illegal in mainland.
 
 French people are romantic. 
 Probably you will say that's good, it means that French people are not boring. That also means French people is emotional, that is not a good thing. However, romantic is useless, especially in politics.
